# traveldata

./: .env.example  README.md  alembic.ini  pyproject.toml
docs/: architecture.md
old/: README.md  architecture.md
tests/: test_api.py  test_connectors.py  test_enrich.py  test_mappers.py  test_resolve.py  test_scoring.py  test_taxonomy.py  test_wikivoyage.py
tests/fixtures/: osm_museum.json  otm_eiffel.json
traveldata/: __init__.py  config.py
traveldata/api/: attributions.py  deps.py  main.py  schemas.py
traveldata/api/routers/: places.py  pois.py
traveldata/cache/: http_cache.py
traveldata/connectors/: __init__.py  base.py  opentripmap.py  osm_overpass.py  wikivoyage.py
traveldata/db/: base.py  models.py
traveldata/db/migrations/: env.py
traveldata/db/migrations/versions/: 0001_initial.py  0003_destination_flag.py  002_enrichment.py
traveldata/enrich/: pageviews.py  wikidata.py
traveldata/normalize/: mappers.py  taxonomy.py  wikivoyage_parse.py
traveldata/pipeline/: cli.py  enrich.py  ingest.py  places.py  resolve.py  scoring.py
traveldata/raw/: store.py
traveldata/resolve/: blocking.py  conflate.py  matcher.py
traveldata/score/: scorer.py  signals.py
